--- a/personal_best.html
+++ b/personal_best.html
@@ -453,8 +453,8 @@
             </div>
             <div class="filter-buttons">
                 <button class="filter-btn active" data-grade="all">전체</button>
-                <button class="filter-btn" data-grade="6">6학년</button>
-                <button class="filter-btn" data-grade="5">5학년</button>
+                <button class="filter-btn" data-grade="6">6</button>
+                <button class="filter-btn" data-grade="5">5</button>
             </div>
         </div>
         
