--- a/personal_best.html
+++ b/personal_best.html
@@ -453,8 +453,8 @@
             </div>
             <div class="filter-buttons">
                 <button class="filter-btn active" data-grade="all">전체</button>
-                <button class="filter-btn" data-grade="6">6</button>
-                <button class="filter-btn" data-grade="5">5</button>
+                <button class="filter-btn" data-grade="6">6학년</button>
+                <button class="filter-btn" data-grade="5">5학년</button>
             </div>
         </div>
         
@@ -532,7 +532,7 @@
                             <span class="player-name">${item.name}</span>
                         </td>
                         <td>
-                            <span class="grade-badge grade-${item.grade}">${item.grade}학년</span>
+                            <span class="grade-badge grade-${item.grade}">${item.grade}</span>
                         </td>
                         <td>
                             <span class="school-name">${item.school}</span>
