--- a/index.html
+++ b/index.html
@@ -12996,7 +12996,7 @@ const defaultPlayersData = {
                 // 기본 데이터로 초기화 - 첫 번째 선수를 기본 선택 (가나다순)
                 const sortedNames = Object.keys(defaultPlayersData).sort((a, b) => a.localeCompare(b, 'ko'));
                 if (sortedNames.length > 0) {
-                    setSelectedPlayer(sortedNames['이소윤']);
+                    setSelectedPlayer(sortedNames[18]);
                 }
             }, []);
 
