Update title for the speed skating event

--- a/schedule_20251116.html
+++ b/schedule_20251116.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>제1회 경기도 교육감배 쇼트트랙 스피드스케이팅 대회</title>
+    <title>2025 서울특별시장배 빙상경기대회(생활체육:쇼트트랙)</title>
     <style>
         * {
             margin: 0;
